--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/era/src/assets/era-logo" />
+    <link rel="icon" type="image/svg+xml" href="/public/era-logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ERA</title>
   </head>
